...
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="name_already_exists">This name already exists, please choose another one!</string>
    <string name="name_consists_of_spaces_only">The name cannot consist of spaces only.</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
...
    <string name="insert_below">Insert below</string>
    <string name="sprite">Object</string>
    <string name="sprites">Objects</string>
    <string name="spritelist_background_headline">Background</string>
    <string name="dialog_confirm_delete_object_title">Delete this Object?</string>
    <string name="dialog_confirm_delete_multiple_objects_title">Delete these Objects?</string>
...
    <string name="brick_context_dialog_show_source">Show Source Brick</string>
    <string name="brick_context_dialog_delete_brick">Delete Brick</string>
    <string name="brick_context_dialog_copy_brick">Copy Brick</string>
    <string name="brick_context_dialog_animate_bricks">Animate Brick-Parts</string>
    <string name="brick_context_dialog_add_to_script">Add to Scripts</string>
...

    <!-- New project dialog -->
    <string name="new_project_dialog_title">New Program</string>
    <string name="new_project_dialog_hint">My Program</string>
    <string name="new_project_description_dialog_hint">My description</string>
...
    <string name="new_project_default">Create example program</string>
    <string name="new_project_default_drone">Create example Drone program</string>
    <string name="project_orientation_title">Orientation:</string>
    <string name="project_select_screen_title">Screen</string>
    <!--  -->
...
    <!-- New sprite dialog -->
    <string name="new_sprite_dialog_default_sprite_name">My Object</string>
    <string name="new_sprite_dialog_title">New Object</string>
    <string name="spritename_already_exists">Please choose another object name.</string>
    <string name="rename_sprite_dialog">Rename Object</string>
...
    <!-- Brick categories -->
    <string name="categories">Categories</string>
    <string name="category_motion">Motion</string>
    <string name="category_looks">Looks</string>
    <string name="category_pen">Pen</string>
    <string name="category_sound">Sound</string>
    <string name="category_control">Control</string>
    <string name="category_event">Event</string>
    <string name="category_user_bricks">My Bricks</string>
...
    <string name="brick_set_y">"Set Y to "</string>
    <string name="brick_change_x_by">"Change X by "</string>
    <string name="brick_change_y_by">"Change Y by "</string>
    <string name="brick_go_back">Go back</string>
    <string name="brick_set_rotation_style">"Set rotation style "</string>
...

    <!-- Control bricks -->
    <string name="brick_when_started">When program starts</string>
    <string name="brick_when">When tapped</string>
    <string name="brick_when_condition_when">When</string>
...
    <string name="brick_say_bubble">Say</string>
    <string name="brick_think_say_for_text">for</string>
    <string name="brick_forever">Forever</string>
    <string name="brick_repeat">Repeat</string>
    <string name="brick_repeat_until">Repeat until</string>
    <string name="brick_when_touched">When screen is touched</string>
...
    </plurals>

    <string name="brick_loop_end">End of loop</string>
    <string name="brick_if_begin">If</string>
    <string name="brick_if_begin_second_part">is true then</string>
...
    <string name="brick_set_variable">Set variable</string>
    <string name="brick_change_variable">Change variable</string>
    <string name="brick_variable_spinner_create_new_variable">New…</string>
    <string name="brick_note_default_value">"add comment here…"</string>
    <string name="brick_think_bubble_default_value">"Hmmmm!"</string>
...
    <string name="brick_add_item_to_userlist">to list</string>
    <string name="brick_delete_item_from_userlist_delete">Delete item from list</string>
    <string name="brick_delete_item_from_userlist">at position</string>
    <string name="brick_insert_item_into_userlist_insert_into">Insert</string>
    <string name="brick_insert_item_into_userlist_into_list">into list</string>
...
    <!-- motor -->
    <string name="phiro_motor_stop">Stop Phiro motor</string>
    <string name="brick_phiro_motor_forward_action">Move Phiro motor forward</string>
    <string name="brick_phiro_motor_backward_action">Move Phiro motor backward</string>
    <string name="phiro_motor_speed">Speed</string>

    <!-- sensor -->
...

    <!-- Phiro motor strings -->
    <string name="phiro_motor_left">Left</string>
    <string name="phiro_motor_right">Right</string>
    <string name="phiro_motor_both">Both</string>
    <!--  -->

...
